<resources>
    <string name="app_name">AndroidEats</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account?Sign up now.</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="register">Register</string>
    <string name="name_min_3_characters">Name(Min 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number_10_digits">Mobile Number(10 Digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password(Min 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="preference_file_name">AndroidEATS Preference</string>
    <string name="text_message">Enter your registered mobile number and email address below:</string>
    <string name="next">Next</string>
    <string name="otp_4_characters">OTP(4 characters)</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below</string>
    <string name="profile">My Profile</string>
    <string name="home">Home</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="username">UserName</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="_91_9999999999">+91-9999999999</string>
    <string name="name_of_the_restaurants">Name of the Restaurants</string>
    <string name="cost">Rs. 299/person</string>
    <string name="_4_50">4.50</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="rs_300">Rs.300</string>
    <string name="add">Add</string>
    <string name="choose_form_menu_listed_below">Choose from menu listed below:</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="place_order">Place Order</string>
    <string name="pizza_wala">Pizza walaa aaaaaaaaaaaaaaaa</string>
    <string name="rs_200">Rs.200</string>
    <string name="your_order_has_been_successfully_placed">Your Order has been successfully placed!</string>
    <string name="ok">OK</string>
    <string name="android">Android</string>
    <string name="eats">Eats</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="pindtadka">PindTadka</string>
    <string name="_27_12_2020">27/12/2020</string>
    <string name="total_cost">Price Paid</string>
    <string name="rs_320">Rs.320</string>
    <string name="order_placed_at_19_15">Order Placed at 19:15</string>
    <string name="sort_by">Sort By?</string>
    <string name="cost_low_to_high">Cost(Low To High)</string>
    <string name="cost_high_to_low">Cost(High To Low)</string>
    <string name="rating">Rating</string>
    <string name="question0">Q1. What is AndroidEats?</string>
    <string name="answer0">AndroidEats is a food delivery service that does Home Deliveries to customers. we have served over 75,000 people so far.</string>
    <string name="question1">Q2. Why AndroidEats?</string>
    <string name="answer1">A2. At AndroidEats we understand the challenges you face on a daily basis in sourcing the best quality packaging material. AndroidEats Packaging Assist is to take care of all your packaging needs.</string>
    <string name="question2">Q3. How are you guys different?</string>
    <string name="answer2">A3. Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get repeated orders.</string>
    <string name="question3">Q4. Can i get discounts for big orders?</string>
    <string name="answer3">A4. Sorry, as a practice we do not give discounts as we work on very slim margins, already.But, we could check with the Restaurant - and IF they offer any special discount, we will be happy to pass it on to you!</string>
    <string name="question4">Q5. Forgot Password?</string>
    <string name="answer4">A5. You can reset your password by proving the registered mobile number and email address.You will receive an otp on your registered email and you can change your password any number of time using that same otp for 24hrs.</string>
    <string name="question5">Q6. Contacts?</string>
    <string name="answer5">Contact us on:</string>
    <string name="linkedIn">LinkedIn</string>
    <string name="mb_no">MB no</string>
    <string name="name">Name</string>
    <string name="you_don_t_have_any_favourite_restaurants">No Favourite Restaurants</string>
</resources>