<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/MyProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/favRestaurants"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/favourite_restaurants" />

        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_orderhistory"
            android:title="@string/order_history" />

        <item
            android:id="@+id/faqs"
            android:icon="@drawable/ic_faqs"
            android:title="@string/faqs" />

        <item
            android:id="@+id/logOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />

    </group>
</menu>