<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/lowToHigh"
                android:icon="@drawable/ic_lh"
                android:title="@string/cost_low_to_high"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/highToLow"
                android:icon="@drawable/ic_hl"
                android:title="@string/cost_high_to_low"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/rating"
                android:icon="@drawable/ic_favourite"
                android:title="@string/rating"
                app:showAsAction="ifRoom" />

        </menu>

    </item>


</menu>