<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/name"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_below="@+id/icon"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@drawable/search_view_background"
            android:paddingTop="15dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mobileNo"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@drawable/search_view_background"
            android:paddingTop="15dp"
            android:text="@string/mobile_number_10_digits"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_below="@+id/mobileNo"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@drawable/search_view_background"
            android:paddingTop="15dp"
            android:text="@string/email_address"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@drawable/search_view_background"
            android:paddingTop="15dp"
            android:text="@string/delivery_address"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>


</RelativeLayout>